--- a/src/app/components/index-user/index-user.component.scss
+++ b/src/app/components/index-user/index-user.component.scss
@@ -33,6 +33,7 @@ h1,h2,h3,h4,h5,p{
             img{
                 width: 156px;
                 height: 69px;
+                cursor: pointer;
             }
         }
         .header__nav-enlaces{
@@ -231,6 +232,16 @@ h1,h2,h3,h4,h5,p{
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                    h5{
+                        font-weight: 500;
+                        letter-spacing: 1px;
+                        font-size: 0.9em;
+                    }
+                    p{
+                        font-weight: 500;
+                        letter-spacing: 1px;
+                        font-size: 0.9em;
+                    }
                 }
                 &-three{
                     background: #1a1a1a;
@@ -306,6 +317,7 @@ h1,h2,h3,h4,h5,p{
         width: 100%;
         justify-content: center;
         display: flex;
+        
         &-card{
             width: 80%;
             display: grid;
@@ -330,18 +342,12 @@ h1,h2,h3,h4,h5,p{
                     display: flex;
                     align-items: center;
                     background: transparent;
-
-                    img:nth-child(1){
-                        width: 27px;
-                        height: 36px;
+                    padding-left: 0.5em;
+                    &-estampas{
                         background: transparent;
-                        padding: 0 0.5em;
-                    }
-                    img:nth-child(2){
-                        width: 31px;
-                        height: 31px;
-                        background: transparent;
-                        padding: 0 0.5em;
+                        img{
+                            background: transparent;
+                        }
                     }
                     p{
                         background: #2c2c2c;
@@ -352,8 +358,24 @@ h1,h2,h3,h4,h5,p{
                     background: #2c2c2c;
                     font-weight: 500;
                 }
-                
-                
+            }
+            .elemento {
+                position: relative;
+            }
+            .elemento p {
+                position: absolute;
+                bottom: -3.2em;
+                right: -10px;
+                background-color: rgb(0, 0, 0)!important;
+                color: #ffffff; 
+                padding: 0.8em 1em!important;
+                width: max-content!important;
+                z-index: 9999;
+                border-radius: 5px;
+                display: none;
+            }
+            .elemento:hover p {
+                display: block;
             }
             &-item-previoDescarga{
                 display: flex;
@@ -396,6 +418,39 @@ h1,h2,h3,h4,h5,p{
                     margin: 0 0.1em;
                 }
             }
+        }
+        :nth-child(1){
+            img{
+                margin: 0 5px;
+                cursor: pointer;
+            }
+        }
+        :nth-child(2){
+            width: min-content;
+            margin: 0 auto;
+            padding: 0;
+            img{
+                background: transparent;
+                cursor: pointer;
+                position: relative;
+                margin: 0 auto;
+                width: min-content;
+            }
+        }
+        
+        :nth-child(7){
+            :hover{
+                color: #ff3100;
+                cursor: pointer;
+            }
+        }
+        :nth-child(8){
+            img{
+                :hover{
+                    cursor: pointer;
+                }
+            }
+            
         }
     }
     &-pagination{
@@ -1144,3 +1199,4 @@ h1,h2,h3,h4,h5,p{
     }
 
 }
+
