add page membresia

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         <li><a class="header__nav-enlaces-a">inicio</a></li>
         <li><a class="header__nav-enlaces-a" (click)="openModal()" (click)="scrollToTop()">registrarse</a></li>
         <li><a class="header__nav-enlaces-a">nosotros</a></li>
-        <li><a class="header__nav-enlaces-a">membresia</a></li>
+        <li><a class="header__nav-enlaces-a" routerLink="/membresia">membresia</a></li>
         <li><a class="header__nav-enlaces-a">contactanos</a></li>
       </ul>
     </nav>
