--- a/src/app/components/index-user/index-user.component.html
+++ b/src/app/components/index-user/index-user.component.html
@@ -44,7 +44,7 @@
                 <ul class="container__dropdown-dropdown-menu submenu-excluido" *ngIf="dropdownMenu">
                   <li class="submenu-excluido"><a class="dropdown-item submenu-excluido"><img src="../../../assets/index-usuario/user-account-profile.svg" alt="" class="submenu-excluido">Mi Perfil</a></li>
                   <li class="submenu-excluido"><a class="dropdown-item submenu-excluido"><img src="../../../assets/index-usuario/download.svg" class="submenu-excluido" alt="">Descargas</a></li>
-                  <li class="submenu-excluido"><a class="dropdown-item submenu-excluido"><img src="../../../assets/index-usuario/membrasias.png" class="submenu-excluido" alt="">Membresia</a></li>
+                  <li class="submenu-excluido" routerLink="membresia"><a class="dropdown-item submenu-excluido"><img src="../../../assets/index-usuario/membrasias.png" class="submenu-excluido" alt="">Membresia</a></li>
                   <li class="submenu-excluido"><a class="dropdown-item submenu-excluido" routerLink="/">Cerrar Sesión</a></li>
                 </ul>
               </div>
