--- a/src/app/components/my-user/my-user.component.scss
+++ b/src/app/components/my-user/my-user.component.scss
@@ -1,15 +1,3 @@
-@font-face {
-    font-family: 'Hanson_Bold';
-    src: url('../../../assets/fonts/Hanson-Bold.ttf'); 
-}
-@font-face {
-    font-family: 'MonumentExtended_Regular';
-    src: url('../../../assets/fonts/monumentextended-regular.otf'); 
-}
-@font-face {
-    font-family: 'MonumentExtended_Bold';
-    src: url('../../../assets/fonts/monumentextended-ultrabold.otf'); 
-}
 .container__header{
     color: #fff;
     display: flex;
@@ -100,89 +88,181 @@
         font-family: 'Hanson_Bold';
         letter-spacing: 1.5px;
     }
-    &-subtitulo{
-        font-size: 1em;
-        letter-spacing: 2px;
-        font-family: 'MonumentExtended_Regular';
-    }
 }
-.section__membresia{
+.section__cuenta{
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(4,1fr);
-    gap: 4em;
-    padding: 0 5em 5em 5em;
-    .container__membresia{
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3em;
+    padding: 0 5em;
+    height: 500px;
+    .container__aside{
+        border-top: 5px solid #f00;
+        padding: 3.5em 1.5em;
+        background: #141318;
+        .container__aside-aside{
+            background: #141318;
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            &-label{
+                color: #fff;
+                background: transparent;
+                font-family: 'MonumentExtended_Regular';
+                color: #ff0000;
+                font-weight: 600;
+                font-size: 1.2em;
+                font-family: 'system-ui';
+                grid-column: 1/3;
+                display: flex;
+                flex-direction: column;
+            }
+            &-input{
+                color: #fff;
+                font-family: 'system-ui';
+                border: none;
+                background: transparent;
+                font-size: 1em;
+                margin-top: 1em;
+                letter-spacing: 1px;
+                font-weight: 600;
+                outline: none;
+            }
+            .container__aside-aside-contraseña{
+                display: flex;
+                justify-content: space-between;
+                background: #141318;
+                &-button{
+                    display: flex;
+                    align-items: self-end;
+                    background: #141318;
+                    .button__button{
+                        background: #141318;
+                        height: min-content;
+                        border: none;
+                        color: #fff;
+                        padding-bottom: 0.7em;
+                        cursor: pointer;
+                        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                        font-weight: 500;
+                        letter-spacing: 1.3px;
+                        font-size: 0.9em;
+                    }
+                    :hover{
+                        color: #919191;
+                    }
+                }
+            }
+            .container__redes{
+                background: transparent;
+                .container__redes-titulo{
+                    color: #fff;
+                    background: transparent;
+                    font-family: 'MonumentExtended_Regular';
+                    color: #ff0000;
+                    font-weight: 600;
+                    font-size: 1.2em;
+                    font-family: 'system-ui';
+                }
+                &-redes{
+                    display: grid;
+                    gap: 1em;
+                    flex-direction: column;
+                    background: transparent;
+                    margin: 1.5em 0;
+                    cursor: pointer;
+                    &-group{
+                        display: flex;
+                        flex-direction: row;
+                        background: transparent;
+                        .input__image{
+                            width: 1.6em;
+                            height: 1.6em;
+                            background: transparent;
+                        }
+                        .input__redes{
+                            background: transparent;
+                            padding: 0;
+                            margin: 0 0 0 8px;
+                            outline: none;
+                            width: 100%;
+                            border-bottom: 1px solid #fff;
+                        }
+                    }
+                }
+            }
+        }
+        
+            
+    }
+    .container__cuenta{
         overflow: hidden;
+        grid-column: 2/5;
+        border-top: 5px solid #f00;
+        background: #141318;
+        
         &-card{
             display: flex;
             flex-direction: column;
             align-items: center;
             background: #141318;
-            padding: 2em;
-            &-titulo{
-                font-family: 'Hanson_Bold';
-                color: #fff;
+            &-fila{
+                display: grid;
                 background: #141318;
-                font-size: 2em;
-            }
-            &-items{
-                align-items: center;
-                display: flex;
-                flex-direction: column;
-                padding: 0;
-                margin: 0;
-                background: #141318;
-                font-weight: 100;
-                &-item{
-                    list-style: none;
-                    font-family: "MonumentExtended_Regular";
-                    color: #fff;
-                    background: #141318;
-                    margin: 0.5em 0;
-                    display: flex;
-                    align-items: center;
-                    letter-spacing: 1.9px;
-                    text-align: center;
-                    font-size: 0.8em;
-                    font-weight: 100;
-                }
-                :nth-child(1){
-                    font-size: 2em;
-                    color: #ff0000;
-                    margin: 0;
-                    padding: 0;
-                    letter-spacing: 2px;
-                    &::before{
-                        content: "$";
-                        margin-right: 0.2em;
-                        font-size: 0.9em;
-                    }
-                }
-                :nth-child(2){
-                    font-size: 1.2em;
-                    letter-spacing: 2px;
-                    margin: 0 0 1em 0;
-                }
-            }
-            &-button{
-                color: #fff;
-                padding: 1em 0;
+                grid-template-columns: repeat(5, 1fr);
                 width: 100%;
-                font-family: 'MonumentExtended_Regular';
-                background: transparent;
-                border: 1.5px solid #fff;
-                font-size: 1.2em;
-                font-weight: 100;
-                letter-spacing: 2px;
-                margin-top: 1.5em;
-                cursor: pointer;
-                &:hover{
-                    background: #ffffff04;
+                padding: 1em 0;
+                margin:0;
+                &-col{
+                    background: transparent;
+                    list-style: none;
+                    color: #fff;
+                    justify-self: center;
                 }
             }
         }
+        &-item{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: #141318;
+            padding: 0 1em;
+            border-top: 1px solid #f00;
+            overflow-y: scroll;
+            // height: 447px;
+            height: calc(53px * 8);
+            &-fila{
+                display: grid;
+                grid-template-columns: repeat(5, 1fr);
+                width: 100%;
+                padding: 1em 0;
+                margin:0;
+                border-top: 1px solid #333333;
+                border-bottom: 1px solid #333333;
+                background: #141318;
+                &-col{
+                    background: transparent;
+                    list-style: none;
+                    color: #fff;
+                    justify-self: center;
+                }
+            }
+            &::-webkit-scrollbar{
+                width: 0.4em;
+                background: transparent;
+                height: 100px;
+            }
+            &::-webkit-scrollbar-thumb{
+                background-color: #ff3100;
+                border-radius: 8px;
+                
+            }
+            
+        }
     }
+}
+.container__footer{
+    margin-top: 5em;
 }
 @media only screen and (max-width: 400px) {
     .container__header{
@@ -224,15 +304,10 @@
             font-size: 2.1em;
             text-align: -webkit-center;
         }
-        &-subtitulo{
-            font-size: 0.9em;
-            text-align: -webkit-center;
-            padding: 0 1em;
-        }
     }
-    .section__membresia{
+    .section__cuenta{
         grid-template-columns: 1fr;
-        padding: 0 2em 5em 2em;
+        padding: 0 1em;
     }
 }
 @media only screen and (min-width: 400px) and (max-width: 802px) {
@@ -273,15 +348,10 @@
             font-size: 2.1em;
             text-align: -webkit-center;
         }
-        &-subtitulo{
-            font-size: 0.9em;
-            text-align: -webkit-center;
-            padding: 0 1em;
-        }
     }
-    .section__membresia{
+    .section__cuenta{
         grid-template-columns: 1fr;
-        padding: 0 2em 5em 2em;
+        padding: 0 2em;
     }
 }
 @media only screen and (min-width: 800px) and (max-width: 1165px) {
@@ -290,18 +360,13 @@
             font-size: 2.1em;
             text-align: -webkit-center;
         }
-        &-subtitulo{
-            font-size: 0.9em;
-            text-align: -webkit-center;
-            padding: 0 1em;
-        }
     }
-    .section__membresia{
+    .section__cuenta{
         grid-template-columns: repeat(2, 1fr);
     }
 }
 @media only screen and (min-width: 1165px) and (max-width: 1510px) {
-    .section__membresia{
-        grid-template-columns: repeat(2, 1fr);
+    .section__cuenta{
+        grid-template-columns: repeat(3, 1fr);
     }
 }
